asm_tests/other_testfiles/invalid_files/error16.s
.name "MORO"
.comment "MORJESTA!"
.comment "MORJESTA!"

sti r1, r2, r3
